New feature: accessibility of different views can be controlled via settings.py

--- a/env/itsm.env.example
+++ b/env/itsm.env.example
@@ -111,6 +111,45 @@ LOGO_FILENAME=logo.png
 # SERVICECATALOGUE_FIELD_DETAILS=False
 # SERVICECATALOGUE_FIELD_OPTIONS=False
 # SERVICECATALOGUE_FIELD_SERVICE_LEVEL=False # default setting
+
+# =============================================================================
+# View Access Control (Optional)
+# =============================================================================
+# Control which views require authentication. This allows you to customize
+# the public/protected boundary of your service catalogue.
+#
+# Note: Internal views (available, upcoming, retired, under revision) and
+# Django admin always require authentication regardless of these settings.
+#
+# ONLINE_SERVICES_REQUIRE_LOGIN: Online Services landing page (/sc/)
+#   Default: False (public) - Quick links to online services are publicly accessible
+#   Set to True if you want to require login even for the landing page
+#
+# SERVICE_CATALOGUE_REQUIRE_LOGIN: Service Catalogue and Service Details
+#   Applies to: /sc/services/ (list view) and /sc/service/<id>/ (detail view)
+#   Default: True (protected) - Users must login to browse the catalogue and view details
+#   Set to False if you want the catalogue and service details to be publicly accessible
+#
+# AI_SEARCH_REQUIRE_LOGIN: AI-Assisted Search (/sc/ai-search/)
+#   Default: True (protected) - Users must login to use AI search
+#   IMPORTANT: AI search ALWAYS requires login if SERVICE_CATALOGUE_REQUIRE_LOGIN=True
+#   This prevents information leakage - if services are protected, searching them must be too
+#   To make AI search public, you must set BOTH settings to False
+#   Note: This only applies if AI_SEARCH_ENABLED is True
+#
+# Examples:
+#
+# Make the full catalogue and service details public (no login required):
+# SERVICE_CATALOGUE_REQUIRE_LOGIN=False
+# AI_SEARCH_REQUIRE_LOGIN=False  # AI search can now be public too
+#
+# Require login for everything (including online services landing page):
+# ONLINE_SERVICES_REQUIRE_LOGIN=True
+#
+# Keep catalogue protected but make AI search more restrictive:
+# SERVICE_CATALOGUE_REQUIRE_LOGIN=True  # Catalogue requires login
+# AI_SEARCH_REQUIRE_LOGIN=True          # AI search also requires login (inherited)
+
 # =============================================================================
 # AI-Assisted Service Search Configuration (Optional)
 # =============================================================================
