--- a/env/itsm.env.example
+++ b/env/itsm.env.example
@@ -1,7 +1,7 @@
 # =============================================================================
 # ITSM Service Catalogue - Environment Configuration Example
 # =============================================================================
-# SPDX-License-Identifier: AGPL-3.0-or-later
+# SPDX-License-Identifier: Apache-2.0
 # SPDX-FileCopyrightText: 2024-2026 David Kleinhans, Jade University of Applied Sciences
 #
 # Copy this file to env/itsm.env and configure for your environment.
