--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # ITSM Service Catalogue - Git Ignore File
 # =============================================
-# SPDX-License-Identifier: AGPL-3.0-or-later
+# SPDX-License-Identifier: Apache-2.0
 # SPDX-FileCopyrightText: 2024-2026 David Kleinhans, Jade University of Applied Sciences
 
 # ========================
