--- a/apps/itsm/pytest.ini
+++ b/apps/itsm/pytest.ini
@@ -11,13 +11,13 @@ python_files = tests.py test_*.py *_tests.py
 testpaths = ServiceCatalogue
 
 # Output options
+# Note: --reuse-db and --nomigrations are removed for CI compatibility
+# They can be used locally for faster development iterations
 addopts =
     --verbose
     --strict-markers
     --tb=short
-    --maxfail=5
-    --reuse-db
-    --nomigrations
+    --maxfail=10
     -p no:warnings
 
 # Markers for categorizing tests
