--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -60,8 +60,7 @@ jobs:
       working-directory: ./apps/itsm
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-django pytest-cov
+        pip install -r requirements.txt -r requirements-test.txt
     
     - name: Set up test environment
       run: |
