Major features added: we now in addition staff-only mode can be configured and user creation can be disabled. Both is intended for setup and maintenance.

--- a/env/itsm.env.example
+++ b/env/itsm.env.example
@@ -113,6 +113,37 @@ LOGO_FILENAME=logo.png
 # SERVICECATALOGUE_FIELD_SERVICE_LEVEL=False # default setting
 
 # =============================================================================
+# User Access Control (Optional)
+# =============================================================================
+# Control user creation and access restrictions. Useful for initial setup,
+# testing, or restricting access to a controlled group of users.
+#
+# AUTO_CREATE_USERS: Automatically create users on first login via SSO
+#   Default: True - Users are automatically created when they first authenticate
+#   Set to False to prevent automatic user creation. Only pre-existing users
+#   (created manually via Django admin) will be able to log in.
+#   Useful during initial setup when access should be restricted to specific users.
+#
+# STAFF_ONLY_MODE: Restrict all access to staff users only
+#   Default: False - All authenticated users can access non-staff views
+#   Set to True to require is_staff=True for ALL authenticated access.
+#   Non-staff users will see an "insufficient privileges" page with their
+#   username and options to log out or request access.
+#   Useful during initial setup, maintenance, or restricted access periods.
+#
+# Examples:
+#
+# Allow only pre-existing users (no automatic account creation):
+# AUTO_CREATE_USERS=False
+#
+# Restrict entire application to staff users only:
+# STAFF_ONLY_MODE=True
+#
+# Combined: Only pre-existing staff users can access:
+# AUTO_CREATE_USERS=False
+# STAFF_ONLY_MODE=True
+
+# =============================================================================
 # View Access Control (Optional)
 # =============================================================================
 # Control which views require authentication. This allows you to customize
