--- a/env/itsm.env.example
+++ b/env/itsm.env.example
@@ -57,7 +57,8 @@ HELPDESK_PHONE=+1-555-1234
 # Customize with your organization's brand colors
 PRIMARY_COLOR=0d6efd
 SECONDARY_COLOR=6610f2
-# Logo file name (must be in user_files/logos/ directory)
+# Logo file name (must be in overrides/static/logos/ directory)
+# See overrides/README.md for setup instructions
 LOGO_FILENAME=logo.png
 
 # SECRET_KEY is generated automatically in entrypoint.sh and stored in /secrets/django_secret_key
