--- a/env/itsm.env.example
+++ b/env/itsm.env.example
@@ -183,6 +183,22 @@ LOGO_FILENAME=logo.png
 # AI_SEARCH_REQUIRE_LOGIN=True          # AI search also requires login (inherited)
 
 # =============================================================================
+# REST API – CORS Configuration (Optional)
+# =============================================================================
+# The REST API (under /sc/api/) can be consumed by external browser-based
+# clients such as SharePoint SPFx web parts or intranet portals.
+# For this to work, the calling domain must be listed here.
+#
+# Default: empty (no cross-origin requests allowed – safe if API is unused)
+# CORS headers are only added for /sc/api/ paths; all other pages are unaffected.
+#
+# Comma-separated list of allowed origins (full URL with scheme, no trailing slash):
+# CORS_ALLOWED_ORIGINS=https://yourcompany.sharepoint.com
+#
+# Multiple origins:
+# CORS_ALLOWED_ORIGINS=https://yourcompany.sharepoint.com,https://intranet.example.com
+
+# =============================================================================
 # AI-Assisted Service Search Configuration (Optional)
 # =============================================================================
 # Enable AI-powered search to help users find relevant services based on 
