Added note on configuration of REST API access in settings and sample env file

--- a/env/itsm.env.example
+++ b/env/itsm.env.example
@@ -150,6 +150,10 @@ LOGO_FILENAME=logo.png
 # Control which views require authentication. This allows you to customize
 # the public/protected boundary of your service catalogue.
 #
+# Data of views not requiring login is also accessible via the REST API for use 
+# in downstream applications (e.g. intranet portals, SharePoint web parts). 
+# Consider this when configuring access control.
+# 
 # Note: Internal views (available, upcoming, retired, under revision) and
 # Django admin always require authentication regardless of these settings.
 #
