Added management command forch checking URL to external services in production for availability. And expanded management command to test AI models...

--- a/env/itsm.env.example
+++ b/env/itsm.env.example
@@ -218,8 +218,7 @@ LOGO_FILENAME=logo.png
 # For KISSKI AI (University of Göttingen):
 #   - OpenAI-compatible API format
 #   - Contact your KISSKI administrator for credentials
-#   - Example API URL: https://api.kisski.de/v1
-#   - Supports various AI models (GPT-4, GPT-3.5-turbo, etc.)
+#   - API base URL: https://chat-ai.academiccloud.de/v1
 #
 # Testing & Debugging:
 #   Run: python manage.py test_ai_search
@@ -237,15 +236,21 @@ LOGO_FILENAME=logo.png
 # AI API authentication key (obtain from your AI service provider)
 # AI_SEARCH_API_KEY=your-api-key-here
 #
-# AI model to use (default: deepseek-r1)
-# Recommended KISSKI models:
-#   - deepseek-r1 (reasoning model - RECOMMENDED but outputs <think> tags, handled automatically)
-#   - qwen3-235b-a22b (reasoning model - alternative, may be faster)
-#   - mistral-large-instruct (general purpose - good balance of speed and quality)
-#   - llama-3.3-70b-instruct (general purpose - faster responses)
-# Note: Reasoning models (deepseek-r1, qwen3) provide better analysis but may be slower
-# See KISSKI documentation for complete model list
-# AI_SEARCH_MODEL=deepseek-r1
+# AI model to use (default: deepseek-r1-distill-llama-70b)
+# Recommended models for KISSKI / chat-ai.academiccloud.de:
+#   Reasoning models (produce a <think>…</think> block before the JSON – handled automatically):
+#   - deepseek-r1-distill-llama-70b  ← RECOMMENDED – DeepSeek-R1 distillate, same output format,
+#                                       good balance of reasoning quality / speed / availability
+#   - qwen3-30b-a3b-thinking-2507    – Qwen3 thinking variant, similar reasoning capability
+#   - qwen3-235b-a22b                – Large reasoning model, highest quality but slower
+#   General-purpose models (faster, no reasoning tags):
+#   - llama-3.3-70b-instruct         – Good all-round quality, reliable JSON output
+#   - mistral-large-3-675b-instruct-2512 – Mistral Large, high quality
+#   - meta-llama-3.1-8b-instruct     – Fast and lightweight fallback
+# Note: Reasoning models provide better analysis for ambiguous queries but may be slower.
+# Use python manage.py test_ai_search --model <name> to test any model without changing config.
+# Run python manage.py test_ai_search to list all models currently available on your endpoint.
+# AI_SEARCH_MODEL=deepseek-r1-distill-llama-70b
 #
 # AI request timeout in seconds (default: 180 = 3 minutes)
 # Increase if searches timeout frequently, decrease for faster failures
@@ -257,7 +262,7 @@ LOGO_FILENAME=logo.png
 # Use HTML formatting if needed (e.g., <strong>, <a href="">, <br>).
 #
 # Example English statement:
-# AI_SEARCH_DATA_PROTECTION_STATEMENT_EN=This search uses the <strong>deepseek-r1</strong> model via KISSKI AI (University of Göttingen). Your queries are processed securely and are <strong>not stored or used for training</strong>. For more information, see our <a href="/privacy">privacy policy</a>.
+# AI_SEARCH_DATA_PROTECTION_STATEMENT_EN=This search uses the <strong>deepseek-r1-distill-llama-70b</strong> model via KISSKI AI (University of Göttingen). Your queries are processed securely and are <strong>not stored or used for training</strong>. For more information, see our <a href="/privacy">privacy policy</a>.
 #
 # Example German statement:
-# AI_SEARCH_DATA_PROTECTION_STATEMENT_DE=Diese Suche nutzt das Modell <strong>deepseek-r1</strong> über KISSKI AI (Universität Göttingen). Ihre Anfragen werden sicher verarbeitet und <strong>nicht gespeichert oder für Training verwendet</strong>. Weitere Informationen finden Sie in unserer <a href="/privacy">Datenschutzerklärung</a>.
+# AI_SEARCH_DATA_PROTECTION_STATEMENT_DE=Diese Suche nutzt das Modell <strong>deepseek-r1-distill-llama-70b</strong> über KISSKI AI (Universität Göttingen). Ihre Anfragen werden sicher verarbeitet und <strong>nicht gespeichert oder für Training verwendet</strong>. Weitere Informationen finden Sie in unserer <a href="/privacy">Datenschutzerklärung</a>.
